keycloak/keycloak-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: keycloak
  namespace: default
spec:
  selector:
    app: keycloak
  ports:
    - protocol: TCP
      port: 8443
      targetPort: 8443
  type: ClusterIP
